cluster/apps/network-topology-ui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: network-topology-ui
    app.kubernetes.io/version: latest
  name: network-topology-ui
spec:
  selector:
    app.kubernetes.io/name: network-topology-ui
  ports:
  - name: http
    port: 8080
    targetPort: 8080
