cluster/apps/network-topology-ui/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-topology-ui-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: network-topology-ui
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: netbird
      podSelector:
        matchLabels:
          app.kubernetes.io/name: networkrouter
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: internal-gateway
      podSelector:
        matchLabels:
          app.kubernetes.io/name: internal-gateway
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: victoria-metrics
    ports:
    - port: 8428
      protocol: TCP
